--- a/sass/sass/style.scss
+++ b/sass/sass/style.scss
@@ -1,2 +1,33 @@
 @import 'compass/reset';
 @import 'compass/css3';
+
+
+.navbar {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-bottom: 0;
+    .home {
+        width: 30px;
+        height: 30px;
+        line-height: 30px;
+        text-align: center;
+        @include border-radius(50%);
+        float: left;
+        border: 1px solid #000;
+        i {
+            font-size: 1rem;
+        }
+    }
+    .comment {
+        width: 30px;
+        height: 30px;
+        line-height: 30px;
+        text-align: center;
+        @include border-radius(50%);
+        float: right;
+        border: 1px solid #000;
+        i {
+            font-size: 1rem;
+        }
+    }
+}
