--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,14 +5,29 @@
 </head>
 <body>
     <nav class="navbar navbar-default">
-        <span class="home">
-            <i class="fa fa-home"></i>
-        </span>
-        <span>首页</span>
-        <span>
-            <i class="fa fa-plus"></i>
-        </span>
+        <div class="container">
+            <div class="home">
+                <i class="fa fa-home"></i>
+            </div>
+            <div class="comment">
+                <i class="fa fa-plus"></i>
+            </div>
+        </div>
     </nav>
+    <div class="content col-md-12">
+        <div class="container">
+            <article class="col-md-12">
+                <header class="post-header">
+                    <div class="user-avatar pull-left">
+                        <img src="" alt="">
+                    </div>
+                </header>
+                <div class="article-content">
+                    
+                </div>
+            </article>
+        </div>
+    </div>
 
 <script src="../bower_components/jquery/dist/jquery.min.js"></script>
 <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
