--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,7 +9,7 @@
             <div class="home">
                 <i class="fa fa-home"></i>
             </div>
-            <div class="comment">
+            <div class="new-article">
                 <i class="fa fa-plus"></i>
             </div>
         </div>
@@ -19,11 +19,76 @@
             <article class="col-md-12">
                 <header class="post-header">
                     <div class="user-avatar pull-left">
-                        <img src="" alt="">
+                        <img src="../images/grass.jpg" alt="" width="30" height="30">
                     </div>
                 </header>
-                <div class="article-content">
-                    
+                <div class="post-body">
+                    <p class="post-content">妈个鸡妈个鸡妈个鸡</p>
+                </div>
+                <div class="post-comment">
+                    <div class="comment-btn pull-right">
+                        <i class="fa fa-commenting"></i>
+                    </div>
+                </div>
+            </article>
+            <article class="col-md-12">
+                <header class="post-header">
+                    <div class="user-avatar pull-left">
+                        <img src="../images/grass.jpg" alt="" width="30" height="30">
+                    </div>
+                </header>
+                <div class="post-body">
+                    <p class="post-content">妈个鸡妈个鸡妈个鸡</p>
+                </div>
+                <div class="post-comment">
+                    <div class="comment-btn pull-right">
+                        <i class="fa fa-commenting"></i>
+                    </div>
+                </div>
+            </article>
+            <article class="col-md-12">
+                <header class="post-header">
+                    <div class="user-avatar pull-left">
+                        <img src="../images/grass.jpg" alt="" width="30" height="30">
+                    </div>
+                </header>
+                <div class="post-body">
+                    <p class="post-content">妈个鸡妈个鸡妈个鸡</p>
+                </div>
+                <div class="post-comment">
+                    <div class="comment-btn pull-right">
+                        <i class="fa fa-commenting"></i>
+                    </div>
+                </div>
+            </article>
+            <article class="col-md-12">
+                <header class="post-header">
+                    <div class="user-avatar pull-left">
+                        <img src="../images/grass.jpg" alt="" width="30" height="30">
+                    </div>
+                </header>
+                <div class="post-body">
+                    <p class="post-content">妈个鸡妈个鸡妈个鸡</p>
+                </div>
+                <div class="post-comment">
+                    <div class="comment-btn pull-right">
+                        <i class="fa fa-commenting"></i>
+                    </div>
+                </div>
+            </article>
+            <article class="col-md-12">
+                <header class="post-header">
+                    <div class="user-avatar pull-left">
+                        <img src="../images/grass.jpg" alt="" width="30" height="30">
+                    </div>
+                </header>
+                <div class="post-body">
+                    <p class="post-content">妈个鸡妈个鸡妈个鸡</p>
+                </div>
+                <div class="post-comment">
+                    <div class="comment-btn pull-right">
+                        <i class="fa fa-commenting"></i>
+                    </div>
                 </div>
             </article>
         </div>
