--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -79,13 +79,15 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   -webkit-border-radius: 50%;
   border-radius: 50%;
   float: left;
-  border: 1px solid #000;
+  border: 1px solid #534292;
+  background-color: #534292;
 }
-/* line 17, ../../sass/sass/style.scss */
+/* line 18, ../../sass/sass/style.scss */
 .navbar .home i {
+  color: #fff;
   font-size: 1rem;
 }
-/* line 21, ../../sass/sass/style.scss */
+/* line 23, ../../sass/sass/style.scss */
 .navbar .new-article {
   width: 30px;
   height: 30px;
@@ -95,48 +97,50 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   -webkit-border-radius: 50%;
   border-radius: 50%;
   float: right;
-  border: 1px solid #000;
+  border: 1px solid #534292;
+  background-color: #534292;
 }
-/* line 29, ../../sass/sass/style.scss */
+/* line 32, ../../sass/sass/style.scss */
 .navbar .new-article i {
+  color: #fff;
   font-size: 1rem;
 }
 
-/* line 35, ../../sass/sass/style.scss */
+/* line 39, ../../sass/sass/style.scss */
 article {
   position: relative;
   margin: 5px 0;
   background-color: #534292;
 }
-/* line 39, ../../sass/sass/style.scss */
+/* line 43, ../../sass/sass/style.scss */
 article .post-header {
   position: relative;
   padding: 5px;
   overflow: hidden;
 }
-/* line 44, ../../sass/sass/style.scss */
+/* line 48, ../../sass/sass/style.scss */
 article .post-header .user-avatar img {
   -moz-border-radius: 50%;
   -webkit-border-radius: 50%;
   border-radius: 50%;
 }
-/* line 49, ../../sass/sass/style.scss */
+/* line 53, ../../sass/sass/style.scss */
 article .post-body {
   position: relative;
 }
-/* line 51, ../../sass/sass/style.scss */
+/* line 55, ../../sass/sass/style.scss */
 article .post-body .post-content {
   color: #fff;
   margin-top: 10px;
   margin-bottom: 10px;
 }
-/* line 57, ../../sass/sass/style.scss */
+/* line 61, ../../sass/sass/style.scss */
 article .post-comment {
   position: relative;
   overflow: hidden;
   padding: 5px;
 }
-/* line 61, ../../sass/sass/style.scss */
+/* line 65, ../../sass/sass/style.scss */
 article .post-comment .comment-btn {
   position: relative;
   width: 20px;
@@ -147,7 +151,7 @@ article .post-comment .comment-btn {
   -webkit-border-radius: 50%;
   border-radius: 50%;
 }
-/* line 68, ../../sass/sass/style.scss */
+/* line 72, ../../sass/sass/style.scss */
 article .post-comment .comment-btn i {
   color: #fff;
   font-size: 18px;
