--- a/sass/sass/style.scss
+++ b/sass/sass/style.scss
@@ -13,8 +13,10 @@
         text-align: center;
         @include border-radius(50%);
         float: left;
-        border: 1px solid #000;
+        border: 1px solid #534292;
+        background-color: #534292;
         i {
+            color: #fff;
             font-size: 1rem;
         }
     }
@@ -25,8 +27,10 @@
         text-align: center;
         @include border-radius(50%);
         float: right;
-        border: 1px solid #000;
+        border: 1px solid #534292;
+        background-color: #534292;
         i {
+            color: #fff;
             font-size: 1rem;
         }
     }
