--- a/views/head.ejs
+++ b/views/head.ejs
@@ -1,6 +1,7 @@
 <meta charset="UTF-8">
 <meta name="description" content="">
 <meta name="author" content="Youngbye">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css">
 <link rel="stylesheet" href="../stylesheets/style.css">
